--- a/var/www/admin/template/inventory.tmpl
+++ b/var/www/admin/template/inventory.tmpl
@@ -20,8 +20,8 @@
                 <script type="text/javascript" src="js/buttons.html5.min.js"></script>
 	</head>
 	<body>
-	<div id="purgeLoading" style="display:block;">
-        	<span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span> Loading inventory...
+	<div id="purgeLoading" style="display:flex;">
+        	<span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>&nbsp; Loading inventory, please wait for awesomeness ...
         </div>
 	<div id="wrapper" style="width:98%; padding:10px; display:none;">
 		<div>Show/Hide column: 
