--- a/var/www/admin/template/inventory.tmpl
+++ b/var/www/admin/template/inventory.tmpl
@@ -37,6 +37,7 @@
 			<button type="button" class="btn btn-danger btn-xs toggle-vis" style="outline: 5px auto;" name="9" data-column="9">CommitedGB</button>
 			<button type="button" class="btn btn-danger btn-xs toggle-vis" style="outline: 5px auto;" name="10" data-column="10">ProvisionnedGB</button>
 			<button type="button" class="btn btn-success btn-xs toggle-vis" style="outline: 5px auto;" name="11" data-column="11">Datastore</button>
+			<button type="button" class="btn btn-danger btn-xs toggle-vis" style="outline: 5px auto;" name="12" data-column="12">MAC</button>
 		</div><br />
 		<div name="export-button">Export in: </div>
 		<hr />
@@ -55,6 +56,7 @@
 					<th>CommitedGB</th>
 					<th>ProvisionnedGB</th>
 					<th>Datastore</th>
+					<th>MAC</th>
 				</tr>
 			</thead>
 
@@ -73,6 +75,7 @@
 					<td><TMPL_VAR NAME=COMMITED></td>
 					<td><TMPL_VAR NAME=PROVISIONNED></td>
 					<td><TMPL_VAR NAME=DATASTORE></td>
+					<td><TMPL_VAR NAME=MAC></td>
 				</tr>
 				</TMPL_LOOP>
 			</tbody>
@@ -86,7 +89,7 @@
                                         "smart": false,
                                         "regex": true
                                 },
-			        "columnDefs": [ { "targets": [ 4, 5, 6, 7, 8, 9, 10 ], "visible": false } ]
+			        "columnDefs": [ { "targets": [ 4, 5, 6, 7, 8, 9, 10, 12 ], "visible": false } ]
 			    }
 			);
 			new $.fn.dataTable.Buttons( table, { buttons: [ 'csv', 'excel' ] } );
