Adding showlog CSS info

--- a/var/www/admin/css/sexigraf.css
+++ b/var/www/admin/css/sexigraf.css
@@ -167,3 +167,20 @@ body {
   justify-content: center;
   height: 100%;
 }
+.navbar-right { padding-top: 0px; }
+.float {
+    background: white;
+    border-bottom: 1px solid black;
+    padding: 10px 0 10px 0;
+    margin: 0px;
+    height: 30px;
+    width: 100%;
+    text-align: left;
+}
+.contents { margin-top: 30px; }
+.results {
+    padding-bottom: 20px;
+    font-family: monospace;
+    font-size: small;
+    white-space: pre;
+}
